<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MenuPartidas</class>
 <widget class="QMainWindow" name="MenuPartidas">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>640</width>
    <height>480</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>640</width>
    <height>480</height>
   </size>
  </property>
  <property name="contextMenuPolicy">
   <enum>Qt::DefaultContextMenu</enum>
  </property>
  <property name="windowTitle">
   <string>Worms 2D</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QMainWindow { 
	background-image: url(&quot;../client/vista/data/fondo.png&quot;); 
	background-position: center center;
}</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <property name="sizePolicy">
    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>640</width>
     <height>480</height>
    </size>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QFrame" name="frame">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <widget class="QScrollArea" name="scrollAreaPartidas">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>10</y>
         <width>301</width>
         <height>391</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true"/>
       </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
       <widget class="QWidget" name="scrollContentsPartida">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
          <width>299</width>
          <height>389</height>
         </rect>
        </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="styleSheet">
         <string notr="true">QWidget {
	background-color: black;
	image: url(&quot;../client/vista/data/background-transparente-1.png&quot;);
	border: 2px solid gray;
}</string>
        </property>
       </widget>
      </widget>
      <widget class="QPushButton" name="elegirPartidaButton">
       <property name="geometry">
        <rect>
         <x>86</x>
         <y>410</y>
         <width>150</width>
         <height>40</height>
        </rect>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="maximumSize">
        <size>
         <width>300</width>
         <height>300</height>
        </size>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
	background-color: black;
	border-style: inset;
	border-width: 3px;
	border-color: grey;
	font: bold 14px;
	color: grey;
}

QPushButton:pressed {
	background-color: grey;
	border-style: inset;
}</string>
       </property>
       <property name="text">
        <string>Elegir partida</string>
       </property>
      </widget>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QFrame" name="frame_2">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <widget class="QPushButton" name="volverAtrasButton">
       <property name="geometry">
        <rect>
         <x>86</x>
         <y>410</y>
         <width>150</width>
         <height>40</height>
        </rect>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="maximumSize">
        <size>
         <width>300</width>
         <height>300</height>
        </size>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
	background-color: black;
	border-style: inset;
	border-width: 3px;
	border-color: grey;
	font: bold 14px;
	color: grey;
}

QPushButton:pressed {
	background-color: grey;
	border-style: inset;
}</string>
       </property>
       <property name="text">
        <string>Volver atras</string>
       </property>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
